# cpp_bazel_test_lib_adder

./: .gitignore  MODULE.bazel  README.md
adder/: BUILD.bazel
adder/pub/adder/: adder.h
adder/src/: adder.cpp
adder/test/: BUILD.bazel  adder_test.cpp
